assembly/test/failing/constblock_multiple.asm
@constblock push0() {
    pusha 0x69
}

@constblock push0() {

}
